[project]
name = "agentic-orchestrator"
version = "0.1.0"
description = "Stateful RL environment for agentic workflows"
authors = [{ name="AndrewJerryV" }]
dependencies = [
    "openai",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "inference.py"
